Added debug logs